# semantic-diff

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/src/backend/: main.py
frontend/: package.json  tsconfig.json
frontend/pages/: _app.tsx  constant.ts  index.tsx  index3.tsx
frontend/pages/api/: read-log.ts  read-log.tsx
