[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "x4066x", email = "x4066x@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.4",
    "aiohttp>=3.9.5",
    "uvicorn>=0.30.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
